<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@color/material_light_white"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="@dimen/material_component_cards_left_and_right_padding">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_component_cards_primary_title_bottom_padding"
        android:id="@+id/business_card_name"
        android:text="@string/title"
        android:textSize="@dimen/material_typography_display1"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/material_component_cards_primary_title_bottom_padding"
            android:text="@string/subtitle"
            android:textSize="@dimen/material_typography_subheading"
            android:id="@+id/business_card_course"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="07/05/1992" />

    </LinearLayout>

    <TextView
        android:id="@+id/business_card_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="@dimen/material_typography_title" />

    <TextView
        android:id="@+id/business_card_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="@dimen/material_typography_subheading" />

    <TextView
        android:id="@+id/business_card_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/material_typography_subheading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_mail_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_mail"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/share_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/business_card_info_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


</LinearLayout>
